# GPTSoVITS-cpp-infer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh.md
example/: example_all.cmake
example/clean_text/: clean_text.cpp
example/distributed/: cloud_create_speaker.cpp  edge_inference.cpp  multi_speaker.cpp
example/onnx/: edge_inference.cpp  streaming_inference.cpp
example/pipline_cpp/: gsv.cpp
example/streaming/: streaming_inference.cpp
example/tensorrt/: cloud_create_speaker.cpp  edge_inference.cpp  streaming_inference.cpp
include/GPTSoVITS/: AudioTools.h  EdgePipeline.h  GPTSoVITS.h  GPTSoVITSCpp.h  InferencePipeline.h  PipelineBase.h  SpeakerFeatures.h  SpeakerManager.h  StreamingPipeline.h  plog.h
include/GPTSoVITS/Core/: DeviceContext.h  ModelPool.h
include/GPTSoVITS/G2P/: SymbolManager.h  symbols.h
include/GPTSoVITS/Utils/: LoudnessNormalizer.h  Precision.h  Sampling.h  TensorOps.h
include/GPTSoVITS/model/: CNBertModel.h  base.h  bert.h  device.h  gpt_encoder.h  gpt_step.h  gpu_kernels.h  kv_cache.h  model_io.h  sample_config.h  sovits.h  spectrogram.h  ssl.h  sv_embedding.h  tensor.h  vq.h
include/GPTSoVITS/model/backend/: backend_config.h  onnx_backend.h  tensorrt_backend.h
src/: EdgePipeline.cpp  GPTSoVITSCpp.cpp  InferencePipeline.cpp  PipelineBase.cpp  SpeakerFeatures.cpp  SpeakerManager.cpp  StreamingPipeline.cpp
src/Core/: DeviceContext.cpp  ModelPool.cpp
src/Utils/: LoudnessNormalizer.cpp  Precision.cpp  Sampling.cpp  TensorOps.cpp
src/g2p/: SymbolManager.cpp  base.cpp  g2p_en.cpp  pipline.cpp  symbols.cpp
src/g2p/open_jtalk/mecab/src/: config.h
src/model/: gpt_encoder.cpp  gpt_step.cpp  gpu_kernels.cu  gpu_utils.cpp  kv_cache.cpp  model_io.cpp  sovits.cpp  tensor.cpp
src/model/backend/: tensorrt_backend.cpp
src/model/backend/onnx/: onnx_backend.cpp
src/text/: LangDetect.cpp
